examples/test/testpolicy14271.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14271
  namespace: namespace460
spec:
  podSelector:
    matchLabels:
      key35: value26
      key43: value45
      key25: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value26
      podSelector:
        matchLabels:
          key15: value39
          key7: value4
